# sandbox

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  TEST.md  TODO.md  ansible.cfg  client.py  deployment-blue.yaml  deployment-green.yaml  foo.py  hello-python.py  hello-python.yaml  hello.py  hello.yaml  main.py  preseed.cfg  pyproject.toml  requirements.txt  service-blue.yaml  service-green.yaml  st2.json  test.py  test.sh
.circleci/: config.yml
.github/actions/: action1.yml
.github/workflows/: ansible.yml  ansible2.yml  awx.yml  badges.yml  context.yml  docker.yml  matrix.yml  packer.yml  pr-changed.yml  pr-revert.yml  pr.yml  pre-commit.yml  tag.yml  testing.yml  testing1.yml  testing2.yml  testing3.yml  yamlsort.yml
ansible/: ansible.cfg  localhost.test.yml  playbook.yml  playbook2.yml
ansible/plugins/inventory/: test.py
awx/: ansible.cfg  deploy.yml
awx/roles/deploy/tasks/: main.yml  organizations.yml
awx/roles/deploy/vars/: organizations.yml
collections/: requirements.yaml
docker/: Dockerfile  Makefile  requirements.txt
old/: Dockerfile  client.py  requirements.txt
python/: pyproject.toml  t1.py  test_t1.py
tmp/: ci-15  ci-16  ci-17
