[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Mark Mercado <mamercad@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^6.1.0"
st2client = "^3.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
